--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Chord Scout Favicon.png" />
+    <link rel="icon" type="image/png" href="/Chord Scout Logo Favicon 2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ChordScout - Music Transcription</title>
   </head>
